projects/vb6parse/snapshots/tests/library/financial/fv/fv_with_cdbl.snap
---
source: projects/vb6parse/tests/library/financial/fv.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: result
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Fv
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: CDbl
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: MemberAccessExpression
                                          children:
                                            - kind: Identifier
                                              text: txtRate
                                            - kind: PeriodOperator
                                              text: "."
                                            - kind: TextKeyword
                                              text: Text
                                - kind: RightParenthesis
                                  text: )
                            - kind: Whitespace
                              text: " "
                            - kind: DivisionOperator
                              text: /
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "100"
                        - kind: Whitespace
                          text: " "
                        - kind: DivisionOperator
                          text: /
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "12"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: CInt
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: MemberAccessExpression
                                      children:
                                        - kind: Identifier
                                          text: txtYears
                                        - kind: PeriodOperator
                                          text: "."
                                        - kind: TextKeyword
                                          text: Text
                            - kind: RightParenthesis
                              text: )
                        - kind: Whitespace
                          text: " "
                        - kind: MultiplicationOperator
                          text: "*"
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "12"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: UnaryExpression
                      children:
                        - kind: SubtractionOperator
                          text: "-"
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: CDbl
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: MemberAccessExpression
                                      children:
                                        - kind: Identifier
                                          text: txtDeposit
                                        - kind: PeriodOperator
                                          text: "."
                                        - kind: TextKeyword
                                          text: Text
                            - kind: RightParenthesis
                              text: )
            - kind: RightParenthesis
              text: )
